OutputStream wrapped using PrintStream; more exceptions thrown (explicitly)